# slack-gitbot

./: .gitignore  Dockerfile  README.md  app_manifest.yml  blocks.json  conf.py  conf.yml  git_manager.py  main.py  pyproject.toml
auth_providers/: auth_manager.py  azure_ad_auth.py
certs/key/: .hold
